fixed issue with tags not working with null input

--- a/playground/app.html
+++ b/playground/app.html
@@ -232,7 +232,7 @@
             <form>
                 <form-tags placeholder="input tags"></form-tags>
                 <form-tags label="input tags" [value]="['item1', 'item2']" placeholder="input tags"></form-tags>
-                <form-tags label="input tags" note="a note to describe the tags" placeholder="input tags"></form-tags>
+                <form-tags label="input tags" [value]="null" note="a note to describe the tags" placeholder="input tags"></form-tags>
                 <form-tags label="input errors" errors="the error message" placeholder="input tags"></form-tags>
             </form>
         </dexih-widget>
