--- a/playground/app.html
+++ b/playground/app.html
@@ -90,6 +90,8 @@
 </div>
 
 
+
+
 <dexih-widget-vertical>
     <dexih-widget title="Show all elements" [padding]="true" [showFilter]="true" [showCloseButton]="true" iconClass="fa fa-lg fa-fw fa-database" [showExpandButton]="true">
 
@@ -212,6 +214,7 @@ this should have no padding.
 
             <form>
                 <form-input placeholder="No labels"></form-input>
+                <form-input autocapitalize="on" label="auto capitalize"></form-input>
                 <form-input label="input label" labelLeft="label left" note="a note to describe the input" placeholder="input something"></form-input>
                 <form-input label="input label" note="a note to describe the input" placeholder="input with icon" iconClass="fa fa-pie-chart"></form-input>
                 <form-input label="input with error" note="a note to describe the input and [link](http://dataexpertsgroup.com)" errors="this is invalid" placeholder="input something"
@@ -262,6 +265,8 @@ this should have no padding.
                 <form-select label="Default Value" [allowNullSelect]="true" selectNullMessage="Use null value" [items]="['item1', 'item2','item3']" [enableTextEntry]="true"></form-select>
                 
                 <form-select label="No Items" [items]="[]" [enableTextEntry]="true" iconClass="fa fa-pie-chart"></form-select>
+
+                <form-select label="Items added dynamically" [items]="dynamicItems" [enableTextEntry]="true" iconClass="fa fa-pie-chart"><dexih-button-refresh (click)="AddItems()"></dexih-button-refresh></form-select>
 
                 <form-select label="No Items no text entry" [enableTextEntry]="false" [items]="[]"></form-select>
 
